apps/hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world-dev
  template:
    metadata:
      labels:
        app: hello-world-dev
    spec:
      containers:
      - name: hello-world-dev
        image: nginxdemos/hello:latest
        ports:
        - containerPort: 80
