apps/hello-world/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: 'letsencrypt-clusterissuer'
spec:
  tls:
    - hosts:
      - dev.hello-world.raiun.de
      secretName: hello-world-dev-cert
  rules:
    - host: dev.hello-world.raiun.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-dev
                port: 
                  number: 80
